--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=Command parser
+name=SimpleMqttLibrary
 version=0.0.1
 author=arttupii
 maintainer=arttupii <arttupii@gmail.com>
 sentence=MQTT library to flooding mesh network
 category=Communication
-url=https://github.com/arttupii/SimpleMqttLibrary
+url=https://github.com/JoostAB/SimpleMqttLibrary
 architectures=*
 includes=SimpleMqtt.h
